Enhance robot and human animations and speech controls
Additional features have been added for both robot and human animations, including the introduction of text on robotic and human torsos. Autoplay functionality in qmStates data file was also adjusted. In terms of speech control, adjustments were made to human speech handling with the implementation of new functions for mouth openness control in the human.js file. Other updates include text modification in conversation data and debug and log improvements in the qmHelpers file.

--- a/apps/dfda-1/public/app/public/css/app.css
+++ b/apps/dfda-1/public/app/public/css/app.css
@@ -26747,7 +26747,7 @@ body::after {
     width: auto;
     height: auto;
     object-fit: contain;
-    z-index: 3;
+    z-index: 11;
     margin: auto;
 }
 
@@ -26830,7 +26830,7 @@ body::after {
     font-size: 18px;
     background-color: transparent; /* Green */
     border: none;
-    color: white;
+    color: black;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -26870,6 +26870,6 @@ body::after {
     align-items: center;
     transform: translate(-50%, -50%);
     line-height: 1.3;
-    z-index: 5;
+    z-index: 12;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
