--- a/apps/dfda-1/public/app/public/templates/robot.html
+++ b/apps/dfda-1/public/app/public/templates/robot.html
@@ -5,7 +5,10 @@
             <div class="robot-arm robot-arm_left"></div>
             <div class="robot-arm robot-arm_right"></div>
         </div>
-        <div class="robot-torso"></div>
+        <div class="robot-torso">
+            <p class="robot-torso-text">FDAi</p>
+<!--            <img src="img/fdai-logo-text-black.png" alt="fdai logo">-->
+        </div>
         <div class="robot-head">
             <div class="robot-eyes">
                 <div class="robot-eyeball robot-eyeball_left"></div>
