--- a/apps/dfda-1/public/app/public/css/human.css
+++ b/apps/dfda-1/public/app/public/css/human.css
@@ -34,9 +34,9 @@
 
 .human-eyeball {
     position: absolute;
-    width: 40px;
+    width: 39px;
     height: 40px;
-    background: radial-gradient(ellipse, #000 0%, #111827 30%, #fff 40%) no-repeat center;
+    background: radial-gradient(ellipse, #000 0%, #111827 21%, #fff 20%) no-repeat center;
     background-size: 100%;
     z-index: -2;
     border-radius: 100%;
@@ -72,11 +72,11 @@
     bottom: 15px;
     left: 36px;
     width: 30px;
-    height: 10px;
+    height: 3px;
     background-color: black;
     overflow: hidden;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
+    border-top-left-radius: 0%;
+    border-top-right-radius: 0%;
     transition: height 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
@@ -88,8 +88,20 @@
     left: 0;
 }
 
+.human-tongue {
+    display: none;
+    width: 50%;
+    height: 20px;
+    background-color: #ff002e;
+    border-radius: 50%;
+    position: relative;
+    top: 50%;
+    left: 25%;
+}
+
 .human_speaking .human-mouth {
-    height: 15px;
+    height: 10px;
+    border-radius: 50%;
 }
 
 .human_speaking .human-mouth-container {
@@ -97,24 +109,25 @@
     animation: humanSpeakingAnim 0.3s infinite;
 }
 
-.human-mouth-container-line {
-    position: absolute;
-    top: 30%;
-    height: 0px;
-    background-color: #cd3232;
-    width: 100%;
-    margin-top: -1px;
-}
 
-.human_speaking .human-mouth-container-line {
-    height: 3px;
+.human-torso-text {
+    position: absolute;
+    /* bottom: 0; */
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 11px;
+    color: #000000;
+    font-weight: bold;
+    letter-spacing: 0px;
+    margin-bottom: 5px;
 }
 
 .human-torso {
     position: absolute;
     bottom: 0;
-    left: calc(50% - 20px);
-    width: 40px;
+    left: calc(50% - 24px);
+    width: 54px;
     height: 60px;
     border-radius: 10px 10px 0 0;
     border: 2px solid #000000;
@@ -135,16 +148,16 @@
 .human-arms {
     position: absolute;
     bottom: 0;
-    left: 50px;
-    right: 50px;
-    height: 50px;
+    left: 48px;
+    right: 41px;
+    height: 55px;
 }
 
 .human-arm {
     position: absolute;
     border: 2px solid #000000;
     top: 0;
-    width: 10px;
+    width: 14px;
     height: 50px;
     border-radius: 10px 10px 0 0;
     background: red;
@@ -158,7 +171,7 @@
     right: 0;
 }
 
-@-webkit-keyframes lowAnim {
+@-webkit-keyframes humanLowAnim {
     0% {
         -webkit-filter: url("#human-low-0");
         filter: url("#human-low-0"); }
@@ -175,7 +188,7 @@
         -webkit-filter: url("#human-low-4");
         filter: url("#human-low-4"); } }
 
-@keyframes lowAnim {
+@keyframes humanLowAnim {
     0% {
         -webkit-filter: url("#human-low-0");
         filter: url("#human-low-0"); }
@@ -226,39 +239,6 @@
         -webkit-filter: url("#human-listening-4");
         filter: url("#human-listening-4"); } }
 
-@-webkit-keyframes humanSpeakingAnim {
-    0% {
-        -webkit-filter: url("#human-speaking-0");
-        filter: url("#human-speaking-0"); }
-    25% {
-        -webkit-filter: url("#human-speaking-1");
-        filter: url("#human-speaking-1"); }
-    50% {
-        -webkit-filter: url("#human-speaking-2");
-        filter: url("#human-speaking-2"); }
-    75% {
-        -webkit-filter: url("#human-speaking-3");
-        filter: url("#human-speaking-3"); }
-    100% {
-        -webkit-filter: url("#human-speaking-4");
-        filter: url("#human-speaking-4"); } }
-
-@keyframes humanSpeakingAnim {
-    0% {
-        -webkit-filter: url("#human-speaking-0");
-        filter: url("#human-speaking-0"); }
-    25% {
-        -webkit-filter: url("#human-speaking-1");
-        filter: url("#human-speaking-1"); }
-    50% {
-        -webkit-filter: url("#human-speaking-2");
-        filter: url("#human-speaking-2"); }
-    75% {
-        -webkit-filter: url("#human-speaking-3");
-        filter: url("#human-speaking-3"); }
-    100% {
-        -webkit-filter: url("#human-speaking-4");
-        filter: url("#human-speaking-4"); } }
 
 @-webkit-keyframes humanBob {
     0% {
