--- a/apps/dfda-1/public/app/public/css/robot.css
+++ b/apps/dfda-1/public/app/public/css/robot.css
@@ -110,6 +110,19 @@
     height: 3px;
 }
 
+.robot-torso-text {
+    position: absolute;
+    /* bottom: 0; */
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 13px;
+    color: #000000;
+    font-weight: bold;
+    letter-spacing: 0px;
+    margin-bottom: 5px;
+}
+
 .robot-torso {
     position: absolute;
     bottom: 0;
