--- a/apps/dfda-1/public/app/public/templates/human.html
+++ b/apps/dfda-1/public/app/public/templates/human.html
@@ -17,7 +17,8 @@
                 class="human-mouth">
                 <div class="human-mouth-container">
                     <div id="human-tongue"
-                        class="human-tongue"></div>
+                        class="human-tongue">
+                    </div>
                 </div>
             </div>
         </div>
