--- a/apps/dfda-1/public/app/public/css/human.css
+++ b/apps/dfda-1/public/app/public/css/human.css
@@ -102,17 +102,24 @@
 .human_speaking .human-mouth {
     height: 10px;
     border-radius: 50%;
+    animation: humanTalk 0.1s linear infinite;
+}
+
+@keyframes humanTalk {
+    0% { height: 8px; }
+    50% { height: 10px; }
+    100% { height: 8px; }
 }
 
 .human_speaking .human-mouth-container {
-    -webkit-animation: humanSpeakingAnim 0.3s infinite;
-    animation: humanSpeakingAnim 0.3s infinite;
+    -webkit-animation: humanTalk 0.3s infinite;
+    animation: humanTalk 0.3s infinite;
 }
 
 
 .human-torso-text {
     position: absolute;
-    /* bottom: 0; */
+    top: 6px;
     left: 0;
     right: 0;
     text-align: center;
