Update presentation functionalities and UI elements
The code changes involve several updates in the presentation functionalities, focusing on how slides are manipulated and displayed. This includes adjusting the default values of variables, refining the event handling in the presentation, and modifying the behavior of audio playbacks. Moreover, changes in UI elements, such as the triangle icons and background images display, have been made to enhance the user interface. Minor adjustments were also made in the app's CSS file.

--- a/apps/dfda-1/public/app/public/css/app.css
+++ b/apps/dfda-1/public/app/public/css/app.css
@@ -26241,7 +26241,7 @@ body::after {
   margin: 19px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, .9);
-  backdrop-filter: blur(5px);
+  /*backdrop-filter: blur(5px);*/
   box-shadow: 0 1px 3px rgb(0 0 0 / 50%);
 }
 
