Add new presentation page and functionality
This commit introduces a new `presentation.html` file for displaying a presentation, along with related JavaScript functionality in `render-presentation.js`. A set of slides with content have been defined in `slides-v1.js`. Notably, the rendering function creates HTML structure for each slide, including handling of different types of content such as title, image, video, and text. The presentation page also includes necessary CSS styles for presentation layout and elements.

--- a/apps/dfda-1/public/app/public/templates/presentation.html
+++ b/apps/dfda-1/public/app/public/templates/presentation.html
@@ -85,13 +85,13 @@ position: absolute;
         ng-show="state.playing"
         style="right: 50px;"
         ng-click="state.pause()"
-        class="presentation-nav-button presentation-right-button">⏸️</button>
+        class="presentation-nav-button presentation-right-button">⏸️</button>-->
     <button
         id="play"
         ng-show="!state.playing"
         style="right: 50px;"
-        ng-click="state.slideChanged(state.slideIndex)"
-        class="presentation-nav-button presentation-right-button">▶️</button>-->
+        ng-click="state.start()"
+        class="presentation-nav-button presentation-right-button">▶️</button>
     <button
         id="nextButton"
         ng-click="state.next()"
