--- a/apps/browser-extension/popup.css
+++ b/apps/browser-extension/popup.css
@@ -146,12 +146,13 @@ h1 span:first-child {
 }
 h1 span:last-child {
   position: absolute;
-  left: 0;
+  left: 0px;
   top: 0;
   background-image: linear-gradient(#032d50 25%, #00a1ef 35%, white 50%, #20125f 50%, #8313e7 55%, #ff61af 75%);
   -webkit-text-stroke: 0.01em #94a0b9;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-align: center;
 }
 
 h2 {
